# hammingec

./: LICENSE  README.md  pyproject.toml
hammingec/: hamming_code.py
tests/: test_hamming_code.py
